--- a/index.html
+++ b/index.html
@@ -5,6 +5,130 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header-menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header-menu-link active" href="#0">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header-menu-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header-menu-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header-logo"><img class="header-logo-image" src="./images/logo-black.svg" alt="Логотип"></a>
+      <adress class="adress header__address">
+        <p><a class="phone" href="tel:+9995555555">+9 999 555 5555</a></p>
+        <p><a class="email" href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      </adress>
+    </header>
+
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+        <div class="cover-content">
+          <h1 class="cover-title letter-spacing-extended">
+            <span class="aligned-text">ОНО</span>
+            <span class="aligned-text_center">ТЕБЕ</span>
+            <span class="aligned-text_right">НАДО</span>
+          </h1>
+          <div class="cover__description">
+            <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+            <button class="bet-button">Сделать ставку</button>
+          </div>
+        </div>
+      </section>
+      <section class="lots">
+        <h2 class="lots__heading">Лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item card_type_film">
+            <div class="overlay"></div>
+            <a class="card-link" href="#0">
+              <article class="card">
+                <h4 class="card__title">Фильм режиссёра, который бросил киношколу</h4>
+                <p>Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item card_type_book">
+            <div class="overlay"></div>
+            <a class="card-link" href="#0">
+              <article class="card">
+                <h4 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h4>
+                <p>Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item card_type_picture">
+            <div class="overlay"></div>
+            <a class="card-link" href="#0">
+              <article class="card">
+                <h4 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h4>
+                <p>Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a class="lots__look-more-link" href="#0">посмотреть больше</a>
+      </section>
+      <section class="about">
+        <div class="about-logo">
+          <img class="about-logo-image" src="/./images/logo-white.svg" alt="Логотип">
+        </div>
+        <h3 class="about-title">Об аукционе</h3>
+        <div class="about-text">
+          <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <adress class="adress footer__address">
+        <p><a class="phone" href="tel:+9995555555">+9 999 555 5555</a></p>
+        <p><a class="email" href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
+      </adress>
+      <nav class="footer-menu">
+        <ul class="footer-menu-list">
+          <li class="footer-menu-item">
+            <a class="footer-menu-link active" href="#0">главная</a>
+          </li>
+          <li class="footer-menu-item">
+            <a class="footer-menu-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="footer-menu-item">
+           <a class="footer-menu-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer-social-list">
+        <li class="footer-social-list-item">
+          <a class="footer_social-link" href="#0">
+            <img class="footer-social-icon" src="./images/yt.svg" alt="YouTube">
+          </a>
+        </li>
+        <li class="footer-social-list-item">
+          <a class="footer_social-link" href="#0">
+            <img class="footer-social-icon" src="./images/vk.svg" alt="VK">
+          </a>
+        </li>
+        <li class="footer-social-list-item">
+          <a class="footer_social-link" href="#0">
+            <img class="footer-social-icon" src="./images/pinterest.svg" alt="Pinterest">
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
