--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         </ul>
       </nav>
       <a class="header-logo"><img class="header-logo-image" src="./images/logo-black.svg" alt="Логотип"></a>
-      <adress class="adress header__address">
+      <address class="adвress header__address">
         <p><a class="phone" href="tel:+9995555555">+9 999 555 5555</a></p>
         <p><a class="email" href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
-      </adress>
+      </address>
     </header>
 
     <main>
@@ -94,11 +94,11 @@
     </main>
 
     <footer class="footer">
-      <adress class="adress footer__address">
+      <address class="adress footer__address">
         <p><a class="phone" href="tel:+9995555555">+9 999 555 5555</a></p>
         <p><a class="email" href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
         <p>наб. Принсенграхт 263-265, Амстердам</p>
-      </adress>
+      </address>
       <nav class="footer-menu">
         <ul class="footer-menu-list">
           <li class="footer-menu-item">
