--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
           </li>
         </ul>
       </nav>
-      <a class="header-logo"><img class="header-logo-image" src="./images/logo-black.svg" alt="Логотип"></a>
-      <address class="adвress header__address">
-        <p><a class="phone" href="tel:+9995555555">+9 999 555 5555</a></p>
-        <p><a class="email" href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
+      <a class="header-logo"><img src="./images/logo-black.svg" alt="Логотип"></a>
+      <address class="address header__address">
+        <p><a class="address-underline" href="tel:+9995555555">+9 999 555 5555</a></p>
+        <p><a class="address-underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
@@ -94,9 +94,9 @@
     </main>
 
     <footer class="footer">
-      <address class="adress footer__address">
-        <p><a class="phone" href="tel:+9995555555">+9 999 555 5555</a></p>
-        <p><a class="email" href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
+      <address class="address footer__address">
+        <p><a class="address-underline" href="tel:+9995555555">+9 999 555 5555</a></p>
+        <p><a class="address-underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
         <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav class="footer-menu">
@@ -114,18 +114,18 @@
       </nav>
       <ul class="footer-social-list">
         <li class="footer-social-list-item">
-          <a class="footer_social-link" href="#0">
-            <img class="footer-social-icon" src="./images/yt.svg" alt="YouTube">
+          <a href="#0">
+            <img src="./images/yt.svg" alt="YouTube">
           </a>
         </li>
         <li class="footer-social-list-item">
-          <a class="footer_social-link" href="#0">
-            <img class="footer-social-icon" src="./images/vk.svg" alt="VK">
+          <a href="#0">
+            <img src="./images/vk.svg" alt="VK">
           </a>
         </li>
         <li class="footer-social-list-item">
-          <a class="footer_social-link" href="#0">
-            <img class="footer-social-icon" src="./images/pinterest.svg" alt="Pinterest">
+          <a href="#0">
+            <img src="./images/pinterest.svg" alt="Pinterest">
           </a>
         </li>
       </ul>
