--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <div class="overlay"></div>
         <div class="cover-content">
           <h1 class="cover-title letter-spacing-extended">
-            <span class="aligned-text">ОНО</span>
-            <span class="aligned-text_center">ТЕБЕ</span>
-            <span class="aligned-text_right">НАДО</span>
+            <span class="aligned-text">оно</span>
+            <span class="aligned-text_center">тебе</span>
+            <span class="aligned-text_right">надо</span>
           </h1>
           <div class="cover__description">
             <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
@@ -50,30 +50,36 @@
       <section class="lots">
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
-          <li class="lots__card-list-item card_type_film">
-            <div class="overlay"></div>
+          <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <article class="card">
-                <h4 class="card__title">Фильм режиссёра, который бросил киношколу</h4>
-                <p>Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <div class="card-content">
+                  <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+                  <p>Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+                </div>
               </article>
             </a>
           </li>
-          <li class="lots__card-list-item card_type_book">
-            <div class="overlay"></div>
+          <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <article class="card">
-                <h4 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h4>
-                <p>Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <div class="card-content">
+                  <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                  <p>Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+                </div>
               </article>
             </a>
           </li>
-          <li class="lots__card-list-item card_type_picture">
-            <div class="overlay"></div>
+          <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <article class="card">
-                <h4 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h4>
-                <p>Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <div class="card-content">
+                  <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                  <p>Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+                </div>
               </article>
             </a>
           </li>
@@ -82,9 +88,9 @@
       </section>
       <section class="about">
         <div class="about-logo">
-          <img class="about-logo-image" src="/./images/logo-white.svg" alt="Логотип">
+          <img class="about-logo-image" src="./images/logo-white.svg" alt="Логотип">
         </div>
-        <h3 class="about-title">Об аукционе</h3>
+        <h2 class="about-title">Об аукционе</h2>
         <div class="about-text">
           <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
           <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
@@ -115,17 +121,17 @@
       <ul class="footer-social-list">
         <li class="footer-social-list-item">
           <a href="#0">
-            <img src="./images/yt.svg" alt="YouTube">
+            <img src="./images/yt.svg" target="_blank" alt="YouTube">
           </a>
         </li>
         <li class="footer-social-list-item">
           <a href="#0">
-            <img src="./images/vk.svg" alt="VK">
+            <img src="./images/vk.svg" target="_blank" alt="VK">
           </a>
         </li>
         <li class="footer-social-list-item">
           <a href="#0">
-            <img src="./images/pinterest.svg" alt="Pinterest">
+            <img src="./images/pinterest.svg" target="_blank" alt="Pinterest">
           </a>
         </li>
       </ul>
