--- a/index.html
+++ b/index.html
@@ -120,18 +120,18 @@
       </nav>
       <ul class="footer-social-list">
         <li class="footer-social-list-item">
-          <a href="#0">
-            <img src="./images/yt.svg" target="_blank" alt="YouTube">
+          <a href="#0" target="_blank" >
+            <img src="./images/yt.svg" alt="YouTube">
           </a>
         </li>
         <li class="footer-social-list-item">
-          <a href="#0">
-            <img src="./images/vk.svg" target="_blank" alt="VK">
+          <a href="#0" target="_blank" >
+            <img src="./images/vk.svg" alt="VK">
           </a>
         </li>
         <li class="footer-social-list-item">
-          <a href="#0">
-            <img src="./images/pinterest.svg" target="_blank" alt="Pinterest">
+          <a href="#0" target="_blank" >
+            <img src="./images/pinterest.svg" alt="Pinterest">
           </a>
         </li>
       </ul>
